# polity

./: .gitignore  IDEAS.md  PROJECT.md  README.md  polity.db  polity.db-shm  polity.db-wal  pyproject.toml  test_dashboard.py  test_simulation.py
docs/: findings.md  research-memo.md  roadmap.md
docs/manifests/: prompt-surface-ablation-2026-04-06.md  run-manifest-2026-04-06.md
important_runs/: run_001_first_llm.db  run_001b_claude_neutral_labels.db  run_002_base_qwen3_30b.db  run_003_qwen3_30b_rerun.db  run_004_qwen25_72b_base.db  run_005_qwen25_72b_abliterated.db
important_runs/run_006_qwen25_72b_base_batch10/: batch_report.json
src/: __main__.py  actions.py  batch.py  context.py  dashboard.py  db.py  ideology.py  law_compiler.py  metrics.py  model_providers.py  permissions.py  policies.py  resolver.py  run_metadata.py  run_validity.py  runner.py  server.py  state.py  terminal_ui.py
src/assets/static/: dashboard.css
src/assets/templates/: admin.html  agent.html  agents.html  compare.html  layout.html  overview.html  research.html  round.html  society.html
src/strategies/: llm.py
static/: dashboard.css
templates/: compare.html  layout.html  overview.html  round.html  rounds.html  society.html
tests/: conftest.py  test_batch.py  test_context.py  test_dashboard.py  test_db.py  test_info_control.py  test_law_compiler.py  test_llm_strategy.py  test_main.py  test_math.py  test_neutral_labels.py  test_policy_effects.py  test_prompt_surface.py  test_run_validity.py  test_runner.py  test_server.py  test_terminal_ui.py
