[project]
name = "polity"
version = "0.1.0"
description = "Multi-agent society simulator MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sentence-transformers>=2.2.0",
    "starlette>=0.52.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
polity-server = "src.server:main"
polity-dashboard = "src.dashboard:main"
polity-run = "src.runner:main"
polity-batch = "src.batch:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
